# AI-based-podcast-generator

./: README.md
contextagent/: pyproject.toml
contextagent/src/contextagent/: __init__.py  podcast.py  podcast_script_20250630_143147.txt  podcast_script_20250630_144031.txt  podcast_script_20250630_150327.txt  podcast_script_20250630_154019.txt  podcast_script_20250630_155601.txt  podcast_script_20250630_162200.txt  podcast_script_20250630_162603.txt  podcast_script_20250630_165544.txt  podcast_script_20250630_180918.txt
